// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Container should render with debug styles when passed the debug prop 1`] = `
.grid-0 {
  width: 100%;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 64em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .grid-0 {
    max-width: 45rem;
  }
}

@media (min-width: 64em) {
  .grid-0 {
    max-width: 60rem;
  }
}

@media (min-width: 71.25em) {
  .grid-0 {
    max-width: 71.25rem;
  }
}

.grid-0 .EmotionGrid-Row {
  background: #0470F50D;
}

.grid-0 .EmotionGrid-Col {
  background: #0470F50D;
  border: 1px solid #0470F5;
}

.grid-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .grid-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .grid-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width: 48em) {
  .grid-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width: 64em) {
  .grid-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .grid-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

.grid-2 {
  position: relative;
  -webkit-flex: 1 0 0%;
  -ms-flex: 1 0 0%;
  flex: 1 0 0%;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .grid-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .grid-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .grid-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 64em) {
  .grid-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .grid-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

.emotion-0 {
  width: 100%;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 64em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .emotion-0 {
    max-width: 45rem;
  }
}

@media (min-width: 64em) {
  .emotion-0 {
    max-width: 60rem;
  }
}

@media (min-width: 71.25em) {
  .emotion-0 {
    max-width: 71.25rem;
  }
}

.emotion-0 .EmotionGrid-Row {
  background: #0470F50D;
}

.emotion-0 .EmotionGrid-Col {
  background: #0470F50D;
  border: 1px solid #0470F5;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-flex-wrap: wrap;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .emotion-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .emotion-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width: 48em) {
  .emotion-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width: 64em) {
  .emotion-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .emotion-1 {
    margin-left: -0.9375rem;
    margin-right: -0.9375rem;
  }
}

.emotion-2 {
  position: relative;
  -webkit-flex: 1 0 0%;
  -ms-flex: 1 0 0%;
  flex: 1 0 0%;
  width: 100%;
  max-width: 100%;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .emotion-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .emotion-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .emotion-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 64em) {
  .emotion-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .emotion-2 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

<div
  class="EmotionGrid-Container emotion-0"
>
  <div
    class="EmotionGrid-Row emotion-1"
  >
    <div
      class="EmotionGrid-Col emotion-2"
    >
      Col
    </div>
  </div>
</div>
`;

exports[`Container should render with default styles for media %s 1`] = `
.grid-0 {
  width: 100%;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 64em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .grid-0 {
    max-width: 45rem;
  }
}

@media (min-width: 64em) {
  .grid-0 {
    max-width: 60rem;
  }
}

@media (min-width: 71.25em) {
  .grid-0 {
    max-width: 71.25rem;
  }
}

.emotion-0 {
  width: 100%;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 64em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .emotion-0 {
    max-width: 45rem;
  }
}

@media (min-width: 64em) {
  .emotion-0 {
    max-width: 60rem;
  }
}

@media (min-width: 71.25em) {
  .emotion-0 {
    max-width: 71.25rem;
  }
}

<div
  class="EmotionGrid-Container emotion-0"
>
  Container
</div>
`;

exports[`Container should render with fluid styles when passed the fluid prop 1`] = `
.grid-0 {
  width: 100%;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 64em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .grid-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

.emotion-0 {
  width: 100%;
  max-width: 100%;
  margin-right: auto;
  margin-left: auto;
  box-sizing: border-box;
}

@media (min-width: 1em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 33.75em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 48em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 64em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

@media (min-width: 71.25em) {
  .emotion-0 {
    padding-left: 0.9375rem;
    padding-right: 0.9375rem;
  }
}

<div
  class="EmotionGrid-Container emotion-0"
>
  Container fluid
</div>
`;
